# casioPI

./: .gitignore  CMakeLists.txt  README.md
assets-fx/: fxconv-metadata.txt
src/: main.c  mathutils.c  mathutils.h  modmath.c  modmath.h  pi.c  pi.h
